Fix active navItem styling on smaller desktop screens

--- a/src/components/UI/NavBar/NavItem/NavItem.module.scss
+++ b/src/components/UI/NavBar/NavItem/NavItem.module.scss
@@ -22,9 +22,8 @@
     position: absolute;
     width: 100%;
     height: 1px;
-    top: 64px;
+    top: 5.2vh;
     opacity: 1;
-    // top: 235%;
     right: 0;
     background-color: #fff;
   }
